FIxed scrollbar colors

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -131,7 +131,7 @@ footer li a {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #292D2E;
 
 }
 
